--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,6 +1,4 @@
 {
-    // See https://go.microsoft.com/fwlink/?LinkId=733558
-    // for the documentation about the tasks.json format
     "version": "2.0.0",
     "tasks": [
         {
@@ -17,11 +15,10 @@
                 "panel": "dedicated"
             },
             "problemMatcher": {
-                "fileLocation": ["relative", "${workspaceRoot}"],
+                "fileLocation": "absolute",
                 "pattern": [
                     {
-                        "regexp":
-                            "^(.*?)\\(([0-9]*)[- 0-9]*\\) \\: (fatal error|error|warning) [0-9]*\\: (.*)$",
+                        "regexp": "^(.+):([0-9]+) \\((\\w+)\\) (.+)$",
                         "file": 1,
                         "location": 2,
                         "severity": 3,
